# murack-sync

./: Cargo.toml  README.md
src/: config.rs  database.rs  legacy_commands.rs  main.rs
src/legacy_commands/: command_pages.rs  console.rs  di_registry.rs  egui_cui.rs  header_form.rs  legacy_commands_app.rs  navigation.rs
src/legacy_commands/command_pages/: command_page.rs  egui_cui.rs  page_add.rs  page_check.rs  page_move.rs  page_playlist.rs  page_remove.rs
