[package]
name = "murack-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false


[dependencies]
eframe = { version = "0.31.1", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.31.1", features = ["image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

# murack-core dependencies
# walk_base_2_app = { path = "../murack-core/app" }  # temporarily disabled due to build issues
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
