[package]
name = "murack-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false


[dependencies]
eframe = { version = "0.31.1", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.31.1", features = ["image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

anyhow = "1.0"
directories-next = "2.0.0"
murack-core-app = { path = "../murack-core/app" } 
murack-core-data-db = { path = "../murack-core/data_db" } 
murack-core-data-file = { path = "../murack-core/data_file" } 
murack-core-domain = { path = "../murack-core/domain" } 
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
